// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pressable Tests Pressables can be disabled, disabled = {false} 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_disabled_false",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Enabled Pressable",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              112,
              19,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          402,
          10,
          0,
        ],
        "Opacity": 1,
        "Size": [
          112,
          19,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "pressable_disabled_false",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      916,
      39,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can be disabled, disabled = {true} 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_disabled_true",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Disabled Pressable",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": false,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 0.5,
            "Size": [
              116,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          400,
          10,
          0,
        ],
        "Opacity": 1,
        "Size": [
          116,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "pressable_disabled_true",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      916,
      38,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can change text on press/rest, state rest 1`] = `
{
  "Automation Tree": {
    "AutomationId": "one_press_me_button",
    "ControlType": 50020,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "text",
    "Name": "Press Me",
  },
  "Visual Tree": {
    "Comment": "one_press_me_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      64,
      22,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can change text on press/rest, state rest 2`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_press_console",
    "ControlType": 50020,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "text",
    "Name": "onPress",
  },
  "Visual Tree": {
    "Comment": "pressable_press_console",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      854,
      20,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can have delayed event handlers 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_delay_events_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Press Me",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              56,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          56,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "pressable_delay_events_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      56,
      18,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can have delayed event handlers 2`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_delay_events_console",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "pressOut",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "pressIn",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(249, 249, 249, 255)",
    },
    "Children": [
      {
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          1,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          -2,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          -1,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          -1,
          1,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          -2,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          -1,
          -1,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          1,
          -1,
          0,
        ],
        "Opacity": 1,
        "Size": [
          -2,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          0,
          -1,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          0,
          1,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          -2,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              874,
              19,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          11,
          11,
          0,
        ],
        "Opacity": 1,
        "Size": [
          874,
          19,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              874,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          11,
          29,
          0,
        ],
        "Opacity": 1,
        "Size": [
          874,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "pressable_delay_events_console",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      896,
      120,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can have event handlers 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_feedback_events_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Press Me",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "pressable feedback events",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              56,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          56,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "pressable_feedback_events_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      56,
      18,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can have event handlers 2`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_feedback_events_console",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "pressOut",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "press",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "pressIn",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "hover in",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(249, 249, 249, 255)",
    },
    "Children": [
      {
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          1,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          -2,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          -1,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          -1,
          1,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          -2,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          -1,
          -1,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          1,
          -1,
          0,
        ],
        "Opacity": 1,
        "Size": [
          -2,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          0,
          -1,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          0,
          1,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          -2,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              874,
              19,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          11,
          11,
          0,
        ],
        "Opacity": 1,
        "Size": [
          874,
          19,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              874,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          11,
          29,
          0,
        ],
        "Opacity": 1,
        "Size": [
          874,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              874,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          11,
          48,
          0,
        ],
        "Opacity": 1,
        "Size": [
          874,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              874,
              19,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          11,
          66,
          0,
        ],
        "Opacity": 1,
        "Size": [
          874,
          19,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "pressable_feedback_events_console",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      896,
      120,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can have hit slop functionality 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_hit_slop_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Press Outside This View",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 0, 0, 255)",
    },
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              146,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          146,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "pressable_hit_slop_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      146,
      18,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can have ranging opacity 1`] = `
{
  "Automation Tree": {
    "AutomationId": "opacity_pressable",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "Name": "",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 0,
            "Size": [
              50,
              50,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          50,
          50,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 0.10000000149011612,
            "Size": [
              50,
              50,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          50,
          0,
        ],
        "Opacity": 1,
        "Size": [
          50,
          50,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 0.20000000298023224,
            "Size": [
              50,
              50,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          100,
          0,
        ],
        "Opacity": 1,
        "Size": [
          50,
          50,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 0.30000001192092896,
            "Size": [
              50,
              50,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          150,
          0,
        ],
        "Opacity": 1,
        "Size": [
          50,
          50,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 0.4000000059604645,
            "Size": [
              50,
              50,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          200,
          0,
        ],
        "Opacity": 1,
        "Size": [
          50,
          50,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 0.5,
            "Size": [
              50,
              50,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          250,
          0,
        ],
        "Opacity": 1,
        "Size": [
          50,
          50,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 0.6000000238418579,
            "Size": [
              50,
              50,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          300,
          0,
        ],
        "Opacity": 1,
        "Size": [
          50,
          50,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 0.699999988079071,
            "Size": [
              50,
              50,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          350,
          0,
        ],
        "Opacity": 1,
        "Size": [
          50,
          50,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 0.800000011920929,
            "Size": [
              50,
              50,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          400,
          0,
        ],
        "Opacity": 1,
        "Size": [
          50,
          50,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 0.8999999761581421,
            "Size": [
              50,
              50,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          450,
          0,
        ],
        "Opacity": 1,
        "Size": [
          50,
          50,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              50,
              50,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          500,
          0,
        ],
        "Opacity": 1,
        "Size": [
          50,
          50,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "opacity_pressable",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      916,
      550,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can have their accessibility and keyboard focus removed 1`] = `
{
  "Automation Tree": {
    "AutomationId": "accessible_pressable",
    "Children": [
      {
        "AutomationId": "",
        "Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "HelpText": "",
            "IsEnabled": true,
            "IsKeyboardFocusable": false,
            "LocalizedControlType": "text",
            "Name": "Pressable with accessible=true and focusable=true",
          },
        ],
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Pressable with accessible=false",
      },
      {
        "AutomationId": "",
        "Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "HelpText": "",
            "IsEnabled": true,
            "IsKeyboardFocusable": false,
            "LocalizedControlType": "text",
            "Name": "Pressable with focusable=false",
          },
        ],
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "group",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Pressable with accessible=false and focusable=false",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      916,
                      20,
                    ],
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      0,
                      0,
                    ],
                    "Visual Type": "SpriteVisual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  916,
                  20,
                ],
                "Visual Type": "SpriteVisual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              916,
              50,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          916,
          50,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      916,
                      20,
                    ],
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      0,
                      0,
                    ],
                    "Visual Type": "SpriteVisual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  916,
                  20,
                ],
                "Visual Type": "SpriteVisual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              916,
              50,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          50,
          0,
        ],
        "Opacity": 1,
        "Size": [
          916,
          50,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      916,
                      20,
                    ],
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      0,
                      0,
                    ],
                    "Visual Type": "SpriteVisual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  916,
                  20,
                ],
                "Visual Type": "SpriteVisual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              916,
              50,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          100,
          0,
        ],
        "Opacity": 1,
        "Size": [
          916,
          50,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      916,
                      20,
                    ],
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      0,
                      0,
                    ],
                    "Visual Type": "SpriteVisual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  916,
                  20,
                ],
                "Visual Type": "SpriteVisual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              916,
              30,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          150,
          0,
        ],
        "Opacity": 1,
        "Size": [
          916,
          30,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "accessible_pressable",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      916,
      180,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can have tooltips 1`] = `
{
  "Automation Tree": {
    "AutomationId": "tooltip_pressable",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Pressable with ToolTip "Pressable"",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              916,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          916,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "tooltip_pressable",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      916,
      18,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can hide their backface 1`] = `
{
  "Automation Tree": {
    "AutomationId": "backface_pressable",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "View #1, front is visible, back is hidden.",
      },
      {
        "AutomationId": "",
        "Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "HelpText": "",
            "IsEnabled": true,
            "IsKeyboardFocusable": false,
            "LocalizedControlType": "text",
            "Name": "Front",
          },
        ],
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "Name": "",
      },
      {
        "AutomationId": "",
        "Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "HelpText": "",
            "IsEnabled": true,
            "IsKeyboardFocusable": false,
            "LocalizedControlType": "text",
            "Name": "Back (You should not see this)",
          },
        ],
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "View #2, front is hidden, back is visible.",
      },
      {
        "AutomationId": "",
        "Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "HelpText": "",
            "IsEnabled": true,
            "IsKeyboardFocusable": false,
            "LocalizedControlType": "text",
            "Name": "Front (You should not see this)",
          },
        ],
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "Name": "",
      },
      {
        "AutomationId": "",
        "Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "HelpText": "",
            "IsEnabled": true,
            "IsKeyboardFocusable": false,
            "LocalizedControlType": "text",
            "Name": "Back",
          },
        ],
        "ControlType": 50026,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "Name": "",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              916,
              30,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          916,
          30,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 255, 255)",
            },
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      34,
                      20,
                    ],
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      0,
                      0,
                    ],
                    "Visual Type": "SpriteVisual",
                  },
                ],
                "Offset": [
                  83,
                  90,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  34,
                  20,
                ],
                "Visual Type": "SpriteVisual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              200,
              200,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          358,
          29,
          0,
        ],
        "Opacity": 1,
        "Size": [
          200,
          200,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(255, 0, 0, 255)",
            },
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      184,
                      20,
                    ],
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      0,
                      0,
                    ],
                    "Visual Type": "SpriteVisual",
                  },
                ],
                "Offset": [
                  8,
                  90,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  184,
                  20,
                ],
                "Visual Type": "SpriteVisual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              200,
              200,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          358,
          29,
          0,
        ],
        "Opacity": 1,
        "Size": [
          200,
          200,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              916,
              39,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          228,
          0,
        ],
        "Opacity": 1,
        "Size": [
          916,
          39,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 255, 255)",
            },
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      188,
                      19,
                    ],
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      0,
                      0,
                    ],
                    "Visual Type": "SpriteVisual",
                  },
                ],
                "Offset": [
                  6,
                  90,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  188,
                  19,
                ],
                "Visual Type": "SpriteVisual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              200,
              200,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          358,
          267,
          0,
        ],
        "Opacity": 1,
        "Size": [
          200,
          200,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(255, 0, 0, 255)",
            },
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      30,
                      19,
                    ],
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      0,
                      0,
                    ],
                    "Visual Type": "SpriteVisual",
                  },
                ],
                "Offset": [
                  85,
                  90,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  30,
                  19,
                ],
                "Visual Type": "SpriteVisual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              200,
              200,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          358,
          267,
          0,
        ],
        "Opacity": 1,
        "Size": [
          200,
          200,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "backface_pressable",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      916,
      468,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Text can have pressable behavior 1`] = `
{
  "Automation Tree": {
    "AutomationId": "tappable_text",
    "ControlType": 50020,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "text",
    "Name": "Text has built-in onPress handling",
  },
  "Visual Tree": {
    "Comment": "tappable_text",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      916,
      20,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Text can have pressable behavior 2`] = `
{
  "Automation Tree": {
    "AutomationId": "tappable_text_console",
    "ControlType": 50020,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "text",
    "Name": "2x text onPress",
  },
  "Visual Tree": {
    "Comment": "tappable_text_console",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      854,
      19,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;
